use-cases/byo-redis/routes/httpbin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: byo-redis
spec:
  parentRefs:
  - name: gw
    namespace: byo-redis
  hostnames:
  - "httpbin.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      namespace: byo-redis-httpbin
      port: 8000
