use-cases/byo-redis/routes/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: byo-redis
spec:
  parentRefs:
  - name: gw
    namespace: byo-redis
  hostnames:
  - "keycloak.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak
      namespace: keycloak
      port: 80
